fixed dimension bug in ParticleDoseMC

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
 MCsquare/bin/Materials/
+ergNTgamma1.mat
+ergNTgamma2.mat
+ergNTgamma3.mat
+phantoms/PHANTOM_slab_entrance_10mm.mat
+scenarios/alderson01.mat
+scenarios/alderson01MC.mat
+scenarios/alderson01MCnew.mat
+scenarios/alderson01RESULT.mat
+scenarios/liver01.mat
+scenarios/liver01MC.mat
+scenarios/liver01RESULT.mat
+scenarios/lung01.mat
+scenarios/lung01MC.mat
+scenarios/lung01RESULT.mat
+scenarios/lung02.mat
+scenarios/lung02MC.mat
+scenarios/PHANTOM_control.mat
+scenarios/prostate01.mat
+scenarios/prostate01MC.mat
+scenarios/prostate01RESULT.mat
+scenarios/slab01.mat
+scenarios/slab01MC.mat
+scenarios/slab01RESULT.mat
+matRad_calcParticleDoseMC.asv
+matRad_exampleTest.asv
