added function to topas base data to enable uncertainty quantification simulation with topas, also added scorer to topas scorer file, added new example calling new function

--- a/topas/TOPAS_scorer_dose.txt.in
+++ b/topas/TOPAS_scorer_dose.txt.in
@@ -8,3 +8,19 @@ s:Sc/Patient/Tally_DoseToMedium/IfOutputFileAlreadyExists = "Overwrite" # "Exit"
 b:Sc/Patient/Tally_DoseToMedium/OutputToConsole = "False"
 s:Sc/Patient/Tally_DoseToMedium/OutputFile = Sim/ScoreLabel + "_physicalDose"
 
+# SCORERS
+s:Sc/IC/Quantity = "SurfaceTrackCount"
+s:Sc/IC/OutputType = "csv" # "csv" "binary" "Root" "Xml" or "DICOM"
+s:Sc/IC/Surface = "IC/ZPlusSurface"
+sv:Sc/IC/Report = 1 "Sum"
+s:Sc/IC/IfOutputFileAlreadyExists = "Overwrite" # "Exit" "Overwrite" or "Increment"
+s:Sc/IC/OutputFile = Sim/PlanLabel + "_IC"
+s:Sc/IC/OnlyIncludeParticlesOfGeneration = "Primary"
+s:Sc/IC/OnlyIncludeParticlesGoing = "In"
+
+s:Sc/Dose/Quantity = "DumpEventMapDoseToMedium"
+s:Sc/Dose/OutputType = "binary"
+s:Sc/Dose/Component = "Patient"
+sv:Sc/Dose/Report = 1 "Sum"
+s:Sc/Dose/IfOutputFileAlreadyExists = "Overwrite"
+s:Sc/Dose/OutputFile = Sim/PlanLabel + "_dose"
